# clical

./: CMakeLists.txt  LICENSE  README.md  install.sh
src/: calendar.cpp  calendar.h  command_parser.cpp  command_parser.h  event.cpp  event.h  main.cpp  recurring_event.cpp  recurring_event.h  storage.cpp  storage.h  utils.cpp  utils.h
tests/: test_calendar.cpp  test_command_parser.cpp  test_event.cpp  test_recurring_event.cpp  test_storage.cpp  test_utils.cpp
